Plug-InsProject/tests/com.cevelop.includator.tests/resources/com.cevelop.includator.tests/syntaxerrortests/SyntaxError4UnresolvableMemberInUsing.rts
//!Syntax Error: Unresolvable Member in Using
//@main.cpp

namespace NS {
}

using NS::foo; 

int main() {
	return 0;
}
